fix industry featured blocs on mobile

--- a/wp-content/themes/ecosystem-energy/assets/styles/partials/_industry-featured.scss
+++ b/wp-content/themes/ecosystem-energy/assets/styles/partials/_industry-featured.scss
@@ -38,10 +38,11 @@
         height: 200px;
       }
 
-      // White text content shown on hover
+      // White text content shown on hover with clip mask
       .hover-ctn {
         position: absolute;
-        @include flex();
+        @include flex(flex-start);
+        flex-direction: column;
         top: 0;
         width: 100%;
         height: 100%;
@@ -50,9 +51,10 @@
         transition: $basicTransition;
         
         p { 
-          margin: auto 40px;
-          text-align: left;
+          margin: 8px 40px;
           color: white; 
+          @include fontSize(18, 22, 600);
+          text-align: left;
         }
       }
     
@@ -64,6 +66,27 @@
   }
 
   @media (max-width: $tablet) {
-    .featured-list { grid-template-columns: 1fr; }
+    .featured-list { 
+      grid-template-columns: 1fr;
+
+      .featured-block {
+        &::after { content: none; }
+
+        img { height: 150px; }
+
+        .hover-ctn {
+          position: relative;
+          height: auto;
+          align-items: center;
+          padding: 10px 40px 40px;
+          clip-path: none;
+
+          p { 
+            color: $darkgrey;
+            text-align: center;
+          }
+        }
+      }
+    }
   }
 }
